[package]
name = "rust-advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
structopt = "0.3"
# Day 5-10 stuff
regex = "1"
# Global vars stuff
once_cell = "1.16"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false